# Breez

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
core/: settings.py  settings_test.py  urls.py
mainapp/: admin.py  models.py  serializers.py  urls.py  views.py
mainapp/migrations/: 0001_initial.py
